@startuml schedule-entity-relationship

class Agent {
  id: Number
  schedule: Schedule
}

class Schedule {
  startHours: Number
  startMinutes: Number
  endHours: Number
  endMinutes: Number
  missions: Mission[]
}

interface Mission {
  agentID: Number;
  tasks: Task[]
  startedAt: Date
  finishedAt: Date
  duration: Number
}

interface Task {
  taskType: TaskType
  startedAt: Date
  finishedAt: Date
  duration: Number
}

Agent||--||Schedule
Schedule||--o{Mission
Mission||--|{Task

@enduml